@@ -1,0 +1,3 @@
+
+require 'rufus-json/automatic'
+
